[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "helix"
version = "1.0.0"
description = "Helios EXtensible Library for Infrastructure eXamination — Cohesity storage test framework"
requires-python = ">=3.9"
dependencies = [
    # Test framework
    "pytest>=7.0",
    "pytest-timeout>=2.0",

    # Data modeling (core, required for models)
    "pydantic>=2.0",

    # Optional heavy deps — installed separately for full runs
    # "pytest-xdist>=3.5",
    # "allure-pytest>=2.13",
    # "requests>=2.31",
    # "tenacity>=8.2",
    # "boto3>=1.34",
    # "pysmb>=1.2",
    # "paramiko>=3.4",
    # "xxhash>=3.4",
    # "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "black>=24.0",
    "types-requests",
    "types-PyYAML",
    "types-paramiko",
    "boto3-stubs[s3]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["helix*"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
